--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
                     </div>
                     <div class="navigation">
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="#header-main">Home</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </nav>
         <div class="container">
-            <div class="header-main">
+            <div class="header-main" id="header-main">
                 <h1>Live the Real Life</h1>
                 <p>We will find and travel all over the world</p>
                 <button class="headerBtn">Book Now</button>
@@ -39,7 +39,7 @@
     <!-- header end -->
     <section>
         <div class="container">
-            <div class="section-content">
+            <div class="section-content" id="about">
                 <h1>The Perfect travel</h1>
                 <p>We cover everything for your perfect travelling <br> to flight and destination</p>
             </div>
@@ -86,7 +86,7 @@
         </div>
     </div>
     <!-- our-service end -->
-    <div class="register">
+    <div class="register" id="contact">
         <div class="container">
             <div class="register-flex">
                 <form>
